objects/Module__c/Module__c.object-meta.xml
<CustomObject>
    <description>Object that will store the data pertaining to Product Modules. This data should match the Module list that is used by the Provisioner team to entitle customers to Tanium Modules.</description>
    <label>Module</label>
    <nameField>
        <label>Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>