objects/Module__c/fields/Is_Suite__c.field-meta.xml
<CustomField>
    <fullName>Is_Suite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Suite</label>
    <type>Checkbox</type>
</CustomField>