objects/Module__c/fields/Module_Description__c.field-meta.xml
<CustomField>
    <fullName>Module_Description__c</fullName>
    <label>Module Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>